--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+				<meta charset="UTF-8">
+				<title>Titre de la page</title>
+</head>
+<body>
+				Vous êtes malade !
+</body>
+</html>
