--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport"
 content="width=device-width, user-scalable=no"/>
     <meta charset="UTF-8">
-    <title>Registration</title>
+    <title>Registration on Eldis Merveilleux website</title>
     <style type="text/css"> placeholder{font-size: 1.2em;}
     </style>
 </head>
