--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ content="width=device-width, user-scalable=no"/>
 By clicking Register,
 you agree on our <a href="#" style="color: black; background-color: rgb(128, 255, 0)">terms and
 condition.</a></div>
-<div style="width: 100px; float: right; margin: 10px 8px 0 0">
-<input style="opacity: 1.0; font-size: 1.0em; padding: 9px 13px; border: none; border-radius: 6px; background-color: blue; color: white; font-family: georgia" type="submit" value="Register" />
+<div style="width: 100px; float: right; margin: 10px 8px 0 0" <a href="https://facebook.com/rosa.biden">
+<input style="opacity: 1.0; font-size: 1.0em; padding: 9px 13px; border: none; border-radius: 6px; background-color: blue; color: white; font-family: georgia" type="submit" value="Register" /></a>
 </div>
 </body>
 </html>
