--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 content="width=device-width, user-scalable=no"/>
     <meta charset="UTF-8">
     <title>Registration on Eldis Merveilleux website</title>
-    <style type="text/css"> placeholder{font-size: 1.2em;}
+    <style type="text/css">body{background-image: url("R.jpg"); background-repeat: no-repeat; background-attachment: fixed; background-position: top center; opacity: 1.0; font-size: 0.85em; color: rgb(255, 0, 128);} background-image{display: block; margin-left: auto; margin-right: auto;} section{background-color: rgba(255, 255, 255, 0.5); display: block; margin-left: auto; margin-right: auto; border: none; border-radius: 10px; padding: 0 22px 0 37px; max-width: 180px}
     </style>
 </head>
 <body style="margin-left: auto; margin-right: auto; max-width: 400px">
@@ -25,7 +25,7 @@ content="width=device-width, user-scalable=no"/>
 By clicking Register,
 you agree on our <a href="#" style="color: black; background-color: rgb(128, 255, 0)">terms and
 condition.</a></div>
-<div style="width: 100px; float: right; margin: 10px 8px 0 0" <a href="https://facebook.com/rosa.biden">
+<div style="width: 100px; float: right; margin: 10px 8px 0 0; font-family; georgia" <a href="https://facebook.com/rosa.biden" style="color: black; background-color: rgb(128, 255, 0)">
 <input style="opacity: 1.0; font-size: 1.0em; padding: 9px 13px; border: none; border-radius: 6px; background-color: blue; color: white; font-family: georgia" type="submit" value="Register" /></a>
 </div>
 </body>
